<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_table"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/title_table" />

    <item
        android:id="@+id/navigation_scorers"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/title_scorers" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_profile" />

</menu>
