<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vcsaba.beerware.marcadorapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_table"
        android:name="com.vcsaba.beerware.marcadorapp.ui.table.TableFragment"
        android:label="@string/title_table"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.vcsaba.beerware.marcadorapp.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_scorers"
        android:name="com.vcsaba.beerware.marcadorapp.ui.scorers.ScorersFragment"
        android:label="@string/title_scorers"
        tools:layout="@layout/fragment_scorers"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.vcsaba.beerware.marcadorapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>